--- a/resume/data.yml
+++ b/resume/data.yml
@@ -4,15 +4,15 @@
 name:
   first: Yongchang
   middle:
-  last: Doe
+  last: He
 about: Hi, my name is John Doe. I'm just about the most boring type of person you could
        possibly imagine. I like collecting leaves from the tree in my back yard and documenting
        each time I eat a peanut that is non-uniform. I am not a robot. Please hire me.
 position: Software Developer
 
 birth:
-  year: 1990
-  location: New York
+  year: 1983
+  location: Saskatoon, Canada
 
 # you may add more experiences by duplicating the template
 
@@ -34,14 +34,14 @@ experience:
   description: Making coffee and baking cookies.
 
 education:
-- degree: Master of Arts
-  timeperiod: March 2012 - December 2013
-  description: Major in Hacking and Computer Penetration, University A, New York, USA.
-  website: https://example.com
+- degree: Master of Science
+  timeperiod: September 2021 - July 2023
+  description: Major in Computer Science, University of Saskatchewan, Saskatoon, Canada.
+  website: https://www.usask.ca/
 
-- degree: Bachelor of Science
-  timeperiod: March 2009 - December 2011
-  description: Major in Engineering, University B, Los Angeles, USA.
+- degree: Bachelor of Engineering
+  timeperiod: September 2002 - August 2006
+  description: Major in Computer Science, Northwestern Polytechnical University, China.
 
 # skill level goes from 0 to 100
 skills:
@@ -61,8 +61,8 @@ skills:
   level: 70
 - name: Docker
   level: 99
-knowledge: Also proficient in Adobe Photoshop and Illustrator, grew up bilingual
-  (English and Klingon).
+knowledge: Also proficient in Adobe Photoshop and Illustrator, bilingual
+  (English and Chinese Mandarin).
 
 projects:
 - name: best-resume-ever
@@ -87,12 +87,12 @@ contributions:
   url: https://github.com/salomonelli/best-resume-ever
 
 contact:
-  email: john.doe@email.com
-  phone: 0123 456789
-  street: 1234 Broadway
-  city: New York
-  website: johndoe.com
-  github: johnyD
+  email: Yongchanghe8@gmail.com
+  phone: 306 241 2593
+  street: 110 Keevil crescent
+  city: Saskatoon
+  website: dev.to/yongchanghe
+  github: hyc0812
 # en, de, fr, pt, ca, cn, it, es, th, pt-br, ru, sv, id, hu, pl, ja, ka, nl, he, zh-tw, lt, ko, el, nb-no
 lang: en
 `
