--- a/resume/data.yml
+++ b/resume/data.yml
@@ -91,7 +91,7 @@ contact:
   phone: 306 241 2593
   street: 110 Keevil crescent
   city: Saskatoon
-  website: yonglearner.com
+  website: http://yonglearner.com
   github: hyc0812
 # en, de, fr, pt, ca, cn, it, es, th, pt-br, ru, sv, id, hu, pl, ja, ka, nl, he, zh-tw, lt, ko, el, nb-no
 lang: en
